# personal-assistant-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run_tracker.sh
src/agentic/: __init__.py  app.py  cli.py  tracker_daemon.py
src/agentic/api/: __init__.py  server.py
src/agentic/core/: __init__.py  config.py  exceptions.py  logging.py
src/agentic/llm/: __init__.py  openai_client.py  response.py
src/agentic/memory/: __init__.py  base.py  faiss_store.py  manager.py  pinecone_store.py
src/agentic/orchestrator/: __init__.py  orchestrator.py
src/agentic/overlay/: __init__.py  app.py
src/agentic/preprocessing/: __init__.py  context.py  preprocessor.py
src/agentic/skills/: __init__.py  base.py  notes.py  reminder.py  tasks.py
src/agentic/tracking/: __init__.py  aggregator.py  base.py  browser_tracker.py  client.py  context_builder.py  screen_reader.py  vision_analyzer.py  vscode_tracker.py  window_tracker.py
src/agentic/voice/: __init__.py  recorder.py  stt.py  tts.py
tests/: conftest.py  test_memory.py  test_preprocessor.py  test_skills.py
